# hyprland-utils

./: Cargo.toml  Makefile  README.md
emergency-alert/: Cargo.toml  README.md
emergency-alert/src/: args.rs  lib.rs  main.rs  music.rs  volume.rs
eww-progs/: Cargo.toml
eww-progs/src/: args.rs  clock.rs  main.rs  proc.rs  volume.rs  workspaces.rs
