[package]
name = "eww-progs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive"] }
futures-lite = "2.5.0"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
tokio = { version = "1.42.0", features = ["full"] }
