[package]
name = "eww-progs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive"] }
futures-lite = "2.5.0"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
pulsectl-rs = "0.3.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
ta = "0.5.0"
tokio = { version = "1.42.0", features = ["full"] }
